using system element url pattern name instead of hard-coded

--- a/templates/systems/components_selected.html
+++ b/templates/systems/components_selected.html
@@ -38,7 +38,7 @@
    {% for component in system.producer_elements %}
     <div id="tab-content" class="row row-control">
         <div id="" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-            <a href="/systems/{{ system.id }}/component/{{ component.id }}">{{ component.name }}</a>
+            <a href={% url 'system_element' system_id=system.id element_id=component.id %}>{{ component.name }}</a>
         </div>
         <div id="" class="col-xs-8 col-sm-8 col-md-8 col-lg-8 col-xl-8">
             {{ component.description }}
