--- a/templates/systems/element_detail.html
+++ b/templates/systems/element_detail.html
@@ -24,7 +24,7 @@
       <!-- Page Title-->
       <div class="systems-title">
           <h2 class="control-heading">
-            <a href="{{ project.get_absolute_url }}" class="systems-link">{{ system.root_element.name }}</a> &gt; <a href="/systems/{{system.id}}/components/selected" class="systems-link">Selected Components</a> &gt; {{ element.name }}
+            <a href="{{ project.get_absolute_url }}" class="systems-link">{{ system.root_element.name }}</a> &gt; <a href={% url 'components_selected' system_id=system.id %}class="systems-link">Selected Components</a> &gt; {{ element.name }}
           </h2>
       </div>
       <!-- Control Lookup-->
