--- a/templates/components/element_detail_tabs.html
+++ b/templates/components/element_detail_tabs.html
@@ -94,7 +94,7 @@
         <!-- Page Title-->
         <div style="float: left;">
             <h2 class="control-heading" style="">
-              <a href="/controls/components" style="color: black;">Component Library</a> &gt; <a href={% url 'components_selected' system_id=system.id %}style="color: black;">Component Detail</a>
+              <a href="/controls/components" style="color: black;">Component Library</a> {% if system.id %}&gt; <a href='{% url 'components_selected' system_id=system.id %}' style="color: black;">Component Detail</a>{% endif %}
             </h2>
         </div>
       </div>
