--- a/templates/portfolios/portfolios_table.html
+++ b/templates/portfolios/portfolios_table.html
@@ -19,7 +19,7 @@
     <div class="col-xs-10 col-md-5">
       <div>
         <span class="glyphicon glyphicon-folder-close"></span>
-        <a href="/portfolios/{{portfolio.id}}/projects" id="portfolio_{{portfolio.title}}" class="portfolio-project-link">{{portfolio.title}}</a>
+        <a href={% url 'portfolio_projects' pk=portfolio.id %} id="portfolio_{{portfolio.title}}" class="portfolio-project-link">{{portfolio.title}}</a>
       </div>
     </div>
 
