--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,7 +20,7 @@
           <li><a href="/projects" id="menu-projects">Projects</a></li>
           <li><a href="/portfolios" id="menu-portfolios">Portfolios</a></li>
           <li><a href="/controls" id="menu-controls">Controls</a></li>
-          <li><a href="/controls/components" id="menu-controls">Component Library</a></li>
+          <li><a href="{% url 'component_library' %}" id="menu-controls">Component Library</a></li>
           <li><a href="{% url 'store' %}">App Library</a></li>
         {% endif %}
       </ul>
