--- a/templates/task-progress-project-list.html
+++ b/templates/task-progress-project-list.html
@@ -43,7 +43,7 @@
               <input type="hidden" name="previous" value="project"/>
           {% else %}
             {# Go to the Apps Catalog to select an app that implements the protocol specified on the question. #}
-            <form method="get" action="/store"
+            <form method="get" action="{% url 'store' %}"
               onclick="$(this).submit();" style="cursor: pointer; display: inline">
               <input type="hidden" name="q" value="{{task.project.root_task.id}}/{{q.question.key}}">
           {% endif %}
