--- a/templates/systems/element_detail_tabs.html
+++ b/templates/systems/element_detail_tabs.html
@@ -287,36 +287,36 @@
                         </div>
                     </div>
 
-
+              <!-- Tab panel: oscal -->
+              {% if enable_experimental_oscal %}
+                <div role="tabpanel" class="tab-pane" id="oscal">
+                  <p id="oscal_download" class="navbar-text navbar-right">
+                    <a id="oscal_download_json_link"
+                       class="navbar-link"
+                        href={% url 'system_element_download_oscal_json' system_id=system.id element_id=element.id %}>
+                        <span class="glyphicon glyphicon-download"></span>
+                      Download ...
+                    </a>
+                  </p>
+                  <div id="combined_smt" class="control-text"><h3>OSCAL</h3></div>
+                  <div class="systems-element-oscal">{{ oscal }}</div>
                 </div>
-            </div>
-               <!-- Tab panel: oscal -->
-                    {% if enable_experimental_oscal %}
-                        <div role="tabpanel" class="tab-pane" id="oscal">
-                            <p id="oscal_download" class="navbar-text navbar-right">
-                                <a id="oscal_download_json_link"
-                                   class="navbar-link"
-                                   href={% url 'system_element_download_oscal_json' system_id=system.id element_id=element.id %}>
-                                    <span class="glyphicon glyphicon-download"></span>
-                                    Download ...
-                                </a>
-                            </p>
-                            <div id="combined_smt" class="control-text"><h3>OSCAL</h3></div>
-                            <div class="systems-element-oscal">{{ oscal }}</div>
-                        </div>
-                    {% endif %}
+              {% endif %}
 
-                    <!-- Tab panel: opencontrol -->
-                    {% if enable_experimental_opencontrol %}
-                        <div role="tabpanel" class="tab-pane" id="opencontrol">
-                            <div id="combined_smt" class="control-text"><h3>OpenControl (under development)</h3></div>
-                            <div class="systems-element-opencontrol">{{ opencontrol }}</div>
-                        </div>
-                    {% endif %}
+              <!-- Tab panel: opencontrol -->
+              {% if enable_experimental_opencontrol %}
+                <div role="tabpanel" class="tab-pane" id="opencontrol">
+                    <div id="combined_smt" class="control-text"><h3>OpenControl (under development)</h3></div>
+                    <div class="systems-element-opencontrol">{{ opencontrol }}</div>
+                </div>
+              {% endif %}
 
-        </div>
-    </div>
-    {{ block.super }}
+          </div>
+      </div>
+  </div>
+</div>
+
+{{ block.super }}
 {% endblock %}
 
 {% block scripts %}
@@ -326,129 +326,7 @@
         // Adds statement form to page
         function add_smt() {
           var panel_num = $('.panel').length + 1
-          var smt_form = `
-            <div id="panel-panel_num" class="panel panel-default">
-            <div class="panel-heading" role="tabx" id="document-panel_num-title">
-              <h4 id="panel-panel_num-title" class="panel-title">
-                <a role="button" data-toggle="collapse" data-parent="#accordion" href="#document-panel_num-body" aria-expanded="{% if forloop.first %}true{% endif %}" aria-controls="document-panel_num-body">
-                  <span id="producer_element-panel_num-title">{{ element.name }}</span>
-                  <div class="panel-heading-smt"></div>
-                </a>
-              </h4>
-            </div>
-            <div id="document-panel_num-body" class="panel-collapse collapse {% if forloop.first %}in{% endif %} output-document" role="tabpanel" aria-labelledby="document-panel_num-title">
-              <div class="panel-body output-document">
-
-            <div>
-              <form id="smt_panel_num" class="smt_form">
-                <div class="form-group">
-                  <input type="hidden" id="producer_element_id" name="producer_element_id" value="{{ element.id }}">
-                  <label for="compoment"><a href="/systems/{{ system.id }}/component/{{ element.id }}" class="systems-link">{{ element.name }}</a></label>
-                  <!-- <label for="compoment">Producer Component</label> -->
-                  <input type="hidden" class="form-control" id="producer_element_name" name="producer_element_name" placeholder="Name of component"
-                    onchange="$('#producer_element-panel_num-title').text($(this).val());" value="{{ element.name }}">
-                </div>
-
-                <div class="form-group">
-
-                  <label for="compoment">Control</label>
-                  <select class=form-control id="sid_panel_num" name="sid">
-                    {% for ctl in catalog_controls %}
-                      <option value='{{ ctl.id }}'>{{ ctl.id|upper }} - {{ ctl.title }}</option>
-                    {% endfor %}
-                  </select>
-                  <input type="hidden" id="sid_class_panel_num" name="sid_class" prompt="Enter catalog_key" value="{{ catalog_key }}">
-                </div>
-                <div class="form-group">
-                  <input type="hidden" id="smt_id" name="smt_id" value="">
-                  <label for="statement">What is the solution and how is it implemented?</label>
-                  <textarea class="form-control" id="body_panel_num" name="body" placeholder="How component contributes to control" rows="5" cols="50"></textarea>
-                </div>
-                <div class="form-group">
-                  <label for="statement">Part</label>
-                  <input type="text" class="form-control" id="pid" name="pid" placeholder="Statement part (e.g., h)" value="" style="width:180px;">
-                </div>
-                <div class="form-group">
-                  <label for="status">Status</label>
-                    <select class="form-control systems-element-form-status" id="status_{{ forloop.counter }}" name="status">
-                      <option value=''></option>
-                      <option value='Not Implemented'>Not Implemented</option>
-                      <option value='Planned'>Planned</option>
-                      <option value='Partially Implemented'>Partially Implemented</option>
-                      <option value='Implemented'>Implemented</option>
-                      <option value='Unknown'>Unknown</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                  <label for="remarks">Remarks</label>
-                  <textarea class="form-control" id="remarks_panel_num" name="remarks" placeholder="Add remarks for team"  rows="4" cols="50"></textarea>
-                </div>
-
-                <input type="hidden" id="system_id_panel_num" name="system_id" value="{{ system.id }}">
-                <input type="hidden" id="statement_type_panel_num" name="statement_type" value="control_implementation">
-
-              <div class="modal-footer">
-                <div id="success-msg-smt_panel_num" class="systems-element-modal-footer"></div>
-                <button type="button" name="delete" value="delete" class="btn btn-xs btn-danger" onclick="delete_smt('smt_panel_num');return false;">Delete</button>
-                <button type="button" name="save" value="save" class="btn btn-xs btn-success" onclick="save_smt('smt_panel_num');return false;">Save</button>
-
-              </div>
-              <div id="document-panel_num-body" class="panel-collapse collapse {% if forloop.first %}in{% endif %}" role="tabpanel" aria-labelledby="document-panel_num-title">
-                <div class="panel-body">
-                  <div class="smt_block">
-                    <form id="smt_panel_num" class="smt_form">
-                      <div class="form-group">
-                        <input type="hidden" id="producer_element_id" name="producer_element_id" value="{{ element.id }}">
-                        <label for="component"><a href="/systems/{{ system.id }}/component/{{ element.id }}" style="color: black;">{{ element.name }}</a></label>
-                        <!-- <label for="component">Producer Component</label> -->
-                        <input type="hidden" class="form-control" id="producer_element_name" name="producer_element_name" placeholder="Name of component"
-                          onchange="$('#producer_element-panel_num-title').text($(this).val());" value="{{ element.name }}">
-                      </div>
-                      <div class="form-group">
-                        <label for="component">Control</label>
-                        <select class=form-control id="sid_panel_num" name="sid" style="">
-                          {% for ctl in catalog_controls %}
-                            <option value='{{ ctl.id }}'>{{ ctl.id|upper }} - {{ ctl.title }}</option>
-                          {% endfor %}
-                        </select>
-                        <input type="hidden" id="sid_class_panel_num" name="sid_class" prompt="Enter catalog_key" value="{{ catalog_key }}">
-                      </div>
-                      <div class="form-group">
-                        <input type="hidden" id="smt_id" name="smt_id" value="">
-                        <label for="statement">What is the solution and how is it implemented?</label>
-                        <textarea class="form-control" id="body_panel_num" name="body" placeholder="How component contributes to control" rows="5" cols="50"></textarea>
-                      </div>
-                      <div class="form-group">
-                        <label for="statement">Part</label>
-                        <input type="text" class="form-control" id="pid" name="pid" placeholder="Statement part (e.g., h)" value="" style="width:180px;">
-                      </div>
-                      <div class="form-group">
-                        <label for="status">Status</label>
-                          <select class=form-control id="status_{{ forloop.counter }}" name="status" style="width:180px;">
-                            <option value=''></option>
-                            <option value='Not Implemented'>Not Implemented</option>
-                            <option value='Planned'>Planned</option>
-                            <option value='Partially Implemented'>Partially Implemented</option>
-                            <option value='Implemented'>Implemented</option>
-                            <option value='Unknown'>Unknown</option>
-                          </select>
-                      </div>
-                      <div class="form-group">
-                        <label for="remarks">Remarks</label>
-                        <textarea class="form-control" id="remarks_panel_num" name="remarks" placeholder="Add remarks for team" rows="4" cols="50"></textarea>
-                      </div>
-                      <input type="hidden" id="system_id_panel_num" name="system_id" value="{{ system.id }}">
-                      <input type="hidden" id="statement_type_panel_num" name="statement_type" value="control_implementation">
-                      <div class="modal-footer">
-                        <div id="success-msg-smt_panel_num" style="display: inline; margin-right: 20px; color: gray;"></div>
-                        <button type="button" name="delete" value="delete" class="btn btn-xs btn-danger" onclick="delete_smt('smt_panel_num');return false;">Delete</button>
-                        <button type="button" name="save" value="save" class="btn btn-xs btn-success" onclick="save_smt('smt_panel_num');return false;">Save</button>
-                      </div>
-                    </form>
-                  </div>
-                </div><!-- end div class="panel-body"-->
-              </div>
-            </div>`.replace(/panel_num/g, panel_num);
+          var smt_form = `{% include 'components/element_details_tabs_smtform.html' %}`.replace(/panel_num/g, panel_num);
           $( "#smt-list" ).append(smt_form);
         }
 
