--- a/templates/project.html
+++ b/templates/project.html
@@ -178,9 +178,6 @@ h3.question-group-title {
 {% block action_buttons %}
   <div class="btn-group" role="group" aria-label="action buttons group">
     {% if project.system is not None %}
-      <button id="btn-deployments" class="btn btn-sm btn-default" onclick="window.location = '/systems/{{project.system.id}}/deployments';">
-        <em class="glyphicon glyphicon-th"></em>&nbsp; Deployments</a>
-      </button>
       <button id="btn-components" class="btn btn-sm btn-default" onclick="window.location = '/systems/{{project.system.id}}/components/selected';">
         <em class="glyphicon glyphicon-tags"></em>&nbsp; Components</a>
       </button>
@@ -189,6 +186,12 @@ h3.question-group-title {
       </button>
       <button id="btn-poams" class="btn btn-sm btn-default" onclick="window.location = '/systems/{{project.system.id}}/poams';">
         <em class="glyphicon glyphicon-check"></em>&nbsp; POA&Ms</a>
+      </button>
+      <button id="btn-deployments" class="btn btn-sm btn-default" onclick="window.location = '/systems/{{project.system.id}}/deployments';">
+        <em class="glyphicon glyphicon-th"></em>&nbsp; Deployments</a>
+      </button>
+      <button id="btn-sar" class="btn btn-sm btn-default" onclick="window.location = '/systems/{{project.system.id}}/assessments';">
+        <em class="glyphicon glyphicon-th"></em>&nbsp; Assessments</a>
       </button>
       <button id="btn-import-project" class="btn btn-sm btn-default" onclick="show_import_project_modal('{{ portfolio.id }}'); return false;" href="#">
         <em class="glyphicon glyphicon-arrow-up"></em>&nbsp; Import Project</a>
