Put links on project page, rm recent log

--- a/templates/project.html
+++ b/templates/project.html
@@ -367,12 +367,12 @@ h3.question-group-title {
       </div>
       <div class="col-md-4">
         <div style="padding:10px 0 40px 0;">
-          <span class="status-section-header">Recently changed</span>
+          <span class="status-section-header">Links</span>
             <ul>
-              <li>Tiffany edited CISCO ASA Firewall component</li>
-              <li>1 component updated. (<a href="#">view changes</a>)</li>
-              <li>2 components added. (<a href="#">view additions</a>)</li>
-              <li>John left <a href="#">a comment</a> on your Project. </li>
+              <li><a href="">GitHub Repo</a></li>
+              <li><a href="">Jira Board</a></li>
+              <li><a href="">Team List</a></li>
+              <li><a href="">Google Drive</a></li>
             </ul>
         </div>
       </div>
